[package]
name = "endpoint-crawler"
version = "0.1.0"
authors = ["OliverBrotchie <o.brotchie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
reqwest = { version = "0.10.7", features = ["json"] }
select = "0.4.3"
rayon = { version = "*" }
