[package]
name = "endpoint-crawler"
version = "0.1.0"
authors = ["OliverBrotchie <o.brotchie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = {version = "0.2.67", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.17"
reqwest = { version = "0.10.7", features = ["json"] }
select = "0.4.3"
rayon = "1.3.1"
futures = "0.3.5"
itertools = "0.9.0"
